Fixed z-index of mobile theme selector

--- a/www/style-ultramodern.windows.css
+++ b/www/style-ultramodern.windows.css
@@ -2697,6 +2697,7 @@ div > .MJXc-display {
 #theme-selector.engaged {
 	max-height: 1000px;
 	top: 10px;
+    z-index: 10001;
 }
 #theme-selector::before {
 	content: "Select theme";
